<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppointmentScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="title">Hospital - Doctor - Date Time</string>
    <string name="feedback">Feedback</string>
    <string name="check_doc">Check Documents</string>
    <string name="ret">Return</string>
    <string name="label_p_detail">Detail Of The Appointment</string>
    <string name="doc">Documents</string>
    <string name="doc_title">Document Name - Type - Date - Time</string>
    <string name="back_to_appointment">Back To Appointment</string>
    <string name="info_profile">Personal Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex(F/M/N)</string>
    <string name="insurance">Insurance</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="f_cancel_apmt">Cancel Appointment</string>
    <string name="title_activity_future">FutureActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_future_detail">FutureDetailActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="appointment_scheduler">Appointment Scheduler</string>
    <string name="user_name">User Name</string>
    <string name="log_in">Log In</string>
    <string name="patient_log_in">Patient Log In</string>
    <string name="password">Password</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="future">Future</string>
    <string name="past">Past</string>
    <string name="info">Info</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="select_department">Select Department</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="other_info">Other info</string>
    <string name="select_hospitals_manually">Select Hospitals Manually</string>
    <string name="manully_select">Manully Select</string>
    <string name="choose_distance">3 Miles</string>
    <string name="near_hospitals">Near Hospitals</string>
    <string name="new1">New</string>
    <string name="register">Register</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_again">Password</string>
    <string name="title_activity_reg">Register Page</string>
    <string name="f_set_alarm">Set Alarm</string>
    <string name="reg_email">User Name</string>
    <string name="title_activity_select_hospital">Select Hospital</string>
    <string name="title_activity_select_hos_manually">Select Hospital Manually</string>
    <string name="title_activity_select_doc">Select Doctor</string>
    <string name="title_activity_select_date">Select Date</string>
    <string name="title_activity_past">Past Appointment</string>
    <string name="title_activity_past_detial">Past Appointment Detail</string>
    <string name="finger">One finger swipe left to register</string>
    <string name="log_app_sche">Appointment Scheduler</string>
    <string name="log_user_name">User Name</string>
    <string name="log_pw">Password</string>
    <string name="log_login">Log In</string>


</resources>
