<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearinfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/info_profile" />
        <RelativeLayout
            android:id="@+id/switch_face_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/face"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_alignParentLeft="true"
                android:src="@drawable/mini_avatar" />
        </RelativeLayout>
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/name" />
                <EditText
                    android:id="@+id/name"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/age" />
                <EditText
                    android:id="@+id/age"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sex" />
                <EditText
                    android:id="@+id/sex"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/insurance" />
                <EditText
                    android:id="@+id/insurance"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/linearinfo">
        <Button
            android:id="@+id/info_cancel"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/info_confirm"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="@string/confirm"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/butts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom= "true"
        android:gravity="center">
        <Button
            android:id="@+id/newTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="newTab"
            android:text="@string/new1" />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="future"
            android:text="@string/future" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="past"
            android:text="@string/past" />
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="info"
            android:text="@string/info" />
    </LinearLayout>
</RelativeLayout>
