<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/register" />
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/reg_email" />
                <EditText
                    android:id="@+id/reg_id"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/name" />
                <EditText
                    android:id="@+id/name"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/age" />
                <EditText
                    android:id="@+id/age"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sex" />
                <EditText
                    android:id="@+id/sex"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/insurance" />
                <EditText
                    android:id="@+id/insurance"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/reg_password" />
                <EditText
                    android:id="@+id/reg_password"
                    android:textSize="20dp"
                    android:password="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/reg_password_again" />
                <EditText
                    android:id="@+id/reg_password_again"
                    android:textSize="20dp"
                    android:password="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom= "true"
        android:paddingTop="300dp" >
        <Button
            android:id="@+id/reg_cancel"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/reg_confirm"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="@string/confirm"/>
    </LinearLayout>

</RelativeLayout>
